@@ -1,3 +1,8 @@
+2003-11-18  Alper Ersoy  <dirt@gtk.org>
+
+	* makeinfo/makeinfo.c (execute_string): better para handling in case
+	of nested executions.
+
 2003-11-18  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (Multi-column Tables): include cmd name in
